Update and rename Batch 2020 Hadrons Complete Financial Report (9-6-21; 7PM).html to index.html

--- a/index.html
+++ b/index.html
@@ -30,26 +30,18 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 </style></head><body link="#b22222" bgcolor="#ffffff" text="#000000"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"> </td>
 </tr>
 <tr><td rowspan="1" colspan="1"><h3></h3>
-<i>Prepared by: <b></b>
+<i>Prepared by: Justin Rey Secondes (Treasurer), Seth William Tionko (Auditor)<b></b>
 </i>
-<br /><i>Prepared for: <b></b>
+<br /><i>Prepared for: Batch 2020 Hadrons<b></b>
 <br /></i>
-<i>Report Creation Date: 09/06/2021 7:29:49 PM Malay Peninsula Standard Time</i>
-<br /><i>GnuCash 4.6</i>
+<i>Report Creation Date: 09/06/2021 7:29:49 PM Philippine Standard Time</i>
 <br /><br /><i></i>
 <br /><br /></td>
 </tr>
 <tr><td rowspan="1" colspan="1"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"> </td>
 </tr>
 <tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 09/06/2021</h3>
-<i>Prepared by: <b></b>
-</i>
-<br /><i>Prepared for: <b></b>
-<br /></i>
-<i>Report Creation Date: 09/06/2021 7:29:48 PM Malay Peninsula Standard Time</i>
-<br /><i>GnuCash 4.6</i>
-<br /><br /><i></i>
-<br /><br /></td>
+</td>
 </tr>
 <tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td valign="top" align="left" rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -276,8 +268,7 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 </table>
 </td>
 </tr>
-<tr><td valign="top"><a href="gnc-options:report-id=15#">Edit Options</a>
- <a href="gnc-report:id=15#">Single Report</a>
+<tr><td valign="top">
 </td>
 </tr>
 </tbody>
@@ -286,14 +277,7 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 <td valign="top" rowspan="1" colspan="1"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"> </td>
 </tr>
 <tr><td rowspan="1" colspan="1"><h3>Cash Flow - 01/01/2019 to 09/06/2021</h3>
-<i>Prepared by: <b></b>
-</i>
-<br /><i>Prepared for: <b></b>
-<br /></i>
-<i>Report Creation Date: 09/06/2021 7:29:48 PM Malay Peninsula Standard Time</i>
-<br /><i>GnuCash 4.6</i>
-<br /><br /><i></i>
-<br /><br /></td>
+</td>
 </tr>
 <tr><td rowspan="1" colspan="1">Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85bcbd7e0fc#">Assets</a>
 </li>
@@ -435,8 +419,7 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 </table>
 </td>
 </tr>
-<tr><td valign="top"><a href="gnc-options:report-id=16#">Edit Options</a>
- <a href="gnc-report:id=16#">Single Report</a>
+<tr><td valign="top">
 </td>
 </tr>
 </tbody>
@@ -446,14 +429,7 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 <tr><td valign="top" rowspan="1" colspan="2"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"> </td>
 </tr>
 <tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 09/06/2021</h3>
-<i>Prepared by: <b></b>
-</i>
-<br /><i>Prepared for: <b></b>
-<br /></i>
-<i>Report Creation Date: 09/06/2021 7:29:48 PM Malay Peninsula Standard Time</i>
-<br /><i>GnuCash 4.6</i>
-<br /><br /><i></i>
-<br /><br /></td>
+</td>
 </tr>
 <tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td valign="top" align="left"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -776,8 +752,7 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 </table>
 </td>
 </tr>
-<tr><td valign="top"><a href="gnc-options:report-id=17#">Edit Options</a>
- <a href="gnc-report:id=17#">Single Report</a>
+<tr><td valign="top">
 </td>
 </tr>
 </tbody>
