--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir='auto'>
 <head>
+ <title>Batch 2020 Hadrons Financial Report</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <style type="text/css">
 @media (prefers-color-scheme: dark) {body {color: #000; background-color: #fff;}}
@@ -35,8 +36,7 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 <br /><i>Prepared for: Batch 2020 Hadrons<b></b>
 <br /></i>
 <i>Report Creation Date: 09/06/2021 7:29:49 PM Philippine Standard Time</i>
-<br /><br /><i></i>
-<br /><br /></td>
+</td>
 </tr>
 <tr><td rowspan="1" colspan="1"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"> </td>
 </tr>
