--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html dir='auto'>
 <head>
- <title>Batch 2020 Hadrons Financial Report</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>Batch 2020 Hadrons Financial Report</title><meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <style type="text/css">
 @media (prefers-color-scheme: dark) {body {color: #000; background-color: #fff;}}
 h3 { font-family: "Segoe UI", sans-serif; font-size: 15pt; font-weight: bold;  }
@@ -138,8 +137,8 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 </tbody>
 </table>
 </td>
-<td valign="top" align="left"> </td>
-<td valign="top" align="left" rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
+</tr>
+<tr><td valign="top" align="left" rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 </tr>
@@ -429,7 +428,6 @@ sub, sup { vertical-align: baseline; position: relative; top: -0.4em; }
 <tr><td valign="top" rowspan="1" colspan="2"><table cellspacing="1" width="100%" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td rowspan="1" colspan="1"> </td>
 </tr>
 <tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 09/06/2021</h3>
-</td>
 </tr>
 <tr><td rowspan="1" colspan="1"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td valign="top" align="left"><table cellspacing="1" style="margin-left:auto; margin-right:auto" border="0" cellpadding="1"><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
