--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html dir='auto'>
 <head>
-<title>Batch 2020 Hadrons Complete Financial Report</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /* default style */
@@ -82,7 +81,7 @@ td.highlight {
         height: unset;
     }
 }
-</style></head><body><table width="100%"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 09/08/2021</h3>
+</style></head><body><table width="100%"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 10/07/2021</h3>
 <table><tbody><tr><td valign="top" align="left" rowspan="1" colspan="1"><table><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -96,12 +95,12 @@ td.highlight {
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱18,015.81</td>
+<td class="number-cell" rowspan="1" colspan="1">₱18,023.42</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=ae374a62d50440c1ae7ff934dbcd1963#">Bank Interest</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱8.06</td>
+<td class="number-cell" rowspan="1" colspan="1">₱15.67</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=d5a1c04810a544b8b46cacd4e743c9ec#">Donations Received</a>
@@ -155,7 +154,7 @@ td.highlight {
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Revenue</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱18,015.81</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱18,023.42</td>
 </tr>
 </tbody>
 </table>
@@ -256,7 +255,7 @@ td.highlight {
 <tr><td class="text-cell" rowspan="1" colspan="1">Net loss for Period</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱412,736.04</td>
+<td class="number-cell" rowspan="1" colspan="1">₱412,728.43</td>
 </tr>
 </tbody>
 </table>
@@ -274,7 +273,7 @@ td.highlight {
 </table>
 </td>
 </tr>
-<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Cash Flow - 01/01/2019 to 09/08/2021</h3>
+<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Cash Flow - 01/01/2019 to 10/07/2021</h3>
 Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85bcbd7e0fc#">Assets</a>
 </li>
 <li><a href="gnc-register:acct-guid=fad95b7147224f5fba1111133efe3287#">Accounts Receivable</a>
@@ -288,6 +287,10 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </tr>
 <tr><td>Money into selected accounts comes from</td>
 <td></td>
+</tr>
+<tr><td><a href="gnc-register:acct-guid=baf4bf72a25a44299056e0da1a19ad5d#">Geroche Family Financial Help</a>
+</td>
+<td class="number-cell" rowspan="1" colspan="1">₱3,600.94</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=921d6ed3f5284d5081c9dcaa7f44efc3#">Hazmat Donations</a>
 </td>
@@ -331,7 +334,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </tr>
 <tr><td><a href="gnc-register:acct-guid=ae374a62d50440c1ae7ff934dbcd1963#">Bank Interest</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱8.06</td>
+<td class="number-cell" rowspan="1" colspan="1">₱15.67</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=d5a1c04810a544b8b46cacd4e743c9ec#">Donations Received</a>
 </td>
@@ -354,7 +357,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td class="number-cell" rowspan="1" colspan="1">₱3,364.75</td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Money In</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱525,780.41</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱529,388.96</td>
 </tr>
 <tr><td rowspan="1" colspan="2"><hr /></td>
 </tr>
@@ -407,7 +410,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <tr><td rowspan="1" colspan="2"><hr /></td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Difference</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱95,028.56</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱98,637.11</td>
 </tr>
 </tbody>
 </table>
@@ -421,7 +424,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </table>
 </td>
 </tr>
-<tr><td valign="top" rowspan="1" colspan="2"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 09/08/2021</h3>
+<tr><td valign="top" rowspan="1" colspan="2"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 10/07/2021</h3>
 <table><tbody><tr><td valign="top" align="left"><table><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -438,7 +441,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱148,562.56</td>
+<td class="number-cell" rowspan="1" colspan="1">₱152,171.11</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=fad95b7147224f5fba1111133efe3287#">Accounts Receivable</a>
 </td>
@@ -479,20 +482,27 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱94,313.81</td>
+<td class="number-cell" rowspan="1" colspan="1">₱97,922.36</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=46b0a83118494150900246faf29b171d#">Bank Interest</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱8.06</td>
+<td class="number-cell" rowspan="1" colspan="1">₱15.67</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=6b5348d74d494f90a2193dd7db405025#">Charities</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱20,535.60</td>
+<td class="number-cell" rowspan="1" colspan="1">₱24,136.54</td>
+<td valign="top" align="left"> </td>
+<td valign="top" align="left"> </td>
+</tr>
+<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=d5dbd6a27fef47dc9d5817696ce96bd4#">Geroche Family Financial Help</a>
+</td>
+<td class="number-cell" rowspan="1" colspan="1">₱3,600.94</td>
+<td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
@@ -633,7 +643,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱148,562.56</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱152,171.11</td>
 </tr>
 </tbody>
 </table>
@@ -696,13 +706,20 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱477,373.60</td>
+<td class="number-cell" rowspan="1" colspan="1">₱480,974.54</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=be46961b436b49d286aac80391ac70e9#">Charities</a>
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱20,535.60</td>
+<td class="number-cell" rowspan="1" colspan="1">₱24,136.54</td>
+<td valign="top" align="left"> </td>
+</tr>
+<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=baf4bf72a25a44299056e0da1a19ad5d#">Geroche Family Financial Help</a>
+</td>
+<td valign="top" align="left"> </td>
+<td class="number-cell" rowspan="1" colspan="1">₱3,600.94</td>
+<td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=921d6ed3f5284d5081c9dcaa7f44efc3#">Hazmat Donations</a>
@@ -800,13 +817,13 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱412,736.04</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱412,728.43</td>
 </tr>
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Equity</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱64,637.56</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱68,246.11</td>
 </tr>
 <tr><td valign="top" align="left" rowspan="1" colspan="8"><hr /></td>
 </tr>
@@ -814,7 +831,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱148,562.56</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱152,171.11</td>
 </tr>
 </tbody>
 </table>
