--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ td.highlight {
         height: unset;
     }
 }
-</style></head><body><table width="100%"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 10/07/2021</h3>
+</style></head><body><table width="100%"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 10/09/2021</h3>
 <table><tbody><tr><td valign="top" align="left" rowspan="1" colspan="1"><table><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -173,12 +173,18 @@ td.highlight {
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱430,751.85</td>
+<td class="number-cell" rowspan="1" colspan="1">₱435,051.85</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=578d5042d05045cf88775784ba6a9a49#">Charities</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱35,345.60</td>
+<td class="number-cell" rowspan="1" colspan="1">₱39,645.60</td>
+<td valign="top" align="left"> </td>
+</tr>
+<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=e6afaff10423441a8ea263bc86463b6c#">Geroche Family Financial Help</a>
+</td>
+<td class="number-cell" rowspan="1" colspan="1">₱4,300.00</td>
+<td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=437a61625de84ed5b332f8c2b1ddeed6#">Hazmat Donations</a>
@@ -250,12 +256,12 @@ td.highlight {
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Expenses</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱430,751.85</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱435,051.85</td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Net loss for Period</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱412,728.43</td>
+<td class="number-cell" rowspan="1" colspan="1">₱417,028.43</td>
 </tr>
 </tbody>
 </table>
@@ -273,7 +279,7 @@ td.highlight {
 </table>
 </td>
 </tr>
-<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Cash Flow - 01/01/2019 to 10/07/2021</h3>
+<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Cash Flow - 01/01/2019 to 10/09/2021</h3>
 Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85bcbd7e0fc#">Assets</a>
 </li>
 <li><a href="gnc-register:acct-guid=fad95b7147224f5fba1111133efe3287#">Accounts Receivable</a>
@@ -290,7 +296,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </tr>
 <tr><td><a href="gnc-register:acct-guid=baf4bf72a25a44299056e0da1a19ad5d#">Geroche Family Financial Help</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱3,600.94</td>
+<td class="number-cell" rowspan="1" colspan="1">₱4,300.94</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=921d6ed3f5284d5081c9dcaa7f44efc3#">Hazmat Donations</a>
 </td>
@@ -357,12 +363,16 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td class="number-cell" rowspan="1" colspan="1">₱3,364.75</td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Money In</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱529,388.96</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱530,088.96</td>
 </tr>
 <tr><td rowspan="1" colspan="2"><hr /></td>
 </tr>
 <tr><td>Money out of selected accounts goes to</td>
 <td></td>
+</tr>
+<tr><td><a href="gnc-register:acct-guid=e6afaff10423441a8ea263bc86463b6c#">Geroche Family Financial Help</a>
+</td>
+<td class="number-cell" rowspan="1" colspan="1">₱4,300.00</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=437a61625de84ed5b332f8c2b1ddeed6#">Hazmat Donations</a>
 </td>
@@ -405,12 +415,12 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td class="number-cell" rowspan="1" colspan="1">₱83,100.00</td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Money Out</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱430,751.85</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱435,051.85</td>
 </tr>
 <tr><td rowspan="1" colspan="2"><hr /></td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Difference</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱98,637.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱95,037.11</td>
 </tr>
 </tbody>
 </table>
@@ -424,7 +434,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </table>
 </td>
 </tr>
-<tr><td valign="top" rowspan="1" colspan="2"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 10/07/2021</h3>
+<tr><td valign="top" rowspan="1" colspan="2"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 10/09/2021</h3>
 <table><tbody><tr><td valign="top" align="left"><table><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -441,7 +451,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱152,171.11</td>
+<td class="number-cell" rowspan="1" colspan="1">₱148,571.11</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=fad95b7147224f5fba1111133efe3287#">Accounts Receivable</a>
 </td>
@@ -482,7 +492,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱97,922.36</td>
+<td class="number-cell" rowspan="1" colspan="1">₱94,322.36</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=46b0a83118494150900246faf29b171d#">Bank Interest</a>
@@ -495,13 +505,13 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=6b5348d74d494f90a2193dd7db405025#">Charities</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱24,136.54</td>
+<td class="number-cell" rowspan="1" colspan="1">₱20,536.54</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=d5dbd6a27fef47dc9d5817696ce96bd4#">Geroche Family Financial Help</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱3,600.94</td>
+<td class="number-cell" rowspan="1" colspan="1">₱0.94</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
@@ -643,7 +653,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱152,171.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱148,571.11</td>
 </tr>
 </tbody>
 </table>
@@ -706,19 +716,19 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱480,974.54</td>
+<td class="number-cell" rowspan="1" colspan="1">₱481,674.54</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=be46961b436b49d286aac80391ac70e9#">Charities</a>
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱24,136.54</td>
+<td class="number-cell" rowspan="1" colspan="1">₱24,836.54</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=baf4bf72a25a44299056e0da1a19ad5d#">Geroche Family Financial Help</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱3,600.94</td>
+<td class="number-cell" rowspan="1" colspan="1">₱4,300.94</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
@@ -817,13 +827,13 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱412,728.43</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱417,028.43</td>
 </tr>
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Equity</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱68,246.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱64,646.11</td>
 </tr>
 <tr><td valign="top" align="left" rowspan="1" colspan="8"><hr /></td>
 </tr>
@@ -831,7 +841,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱152,171.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱148,571.11</td>
 </tr>
 </tbody>
 </table>
