--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ td.highlight {
         height: unset;
     }
 }
-</style></head><body><table width="100%"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 02/07/2022</h3>
+</style></head><body><table width="100%"><tbody><tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Income Statement For Period Covering 01/01/2019 to 03/25/2022</h3>
 <table><tbody><tr><td valign="top" align="left" rowspan="1" colspan="1"><table><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -173,7 +173,7 @@ td.highlight {
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱435,051.85</td>
+<td class="number-cell" rowspan="1" colspan="1">₱517,976.85</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=578d5042d05045cf88775784ba6a9a49#">Charities</a>
 </td>
@@ -250,18 +250,18 @@ td.highlight {
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=80bb8a76290e46cdb8d787836fe2041a#">Yearbook</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱83,100.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱166,025.00</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Expenses</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱435,051.85</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱517,976.85</td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Net loss for Period</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱417,028.43</td>
+<td class="number-cell" rowspan="1" colspan="1">₱499,953.43</td>
 </tr>
 </tbody>
 </table>
@@ -271,15 +271,15 @@ td.highlight {
 </table>
 </td>
 </tr>
-<tr><td valign="top"><a href="gnc-options:report-id=18#">Edit Options</a>
- <a href="gnc-report:id=18#">Single Report</a>
+<tr><td valign="top"><a href="gnc-options:report-id=170#">Edit Options</a>
+ <a href="gnc-report:id=170#">Single Report</a>
 </td>
 </tr>
 </tbody>
 </table>
 </td>
 </tr>
-<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Cash Flow - 01/01/2019 to 02/07/2022</h3>
+<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Cash Flow - 01/01/2019 to 03/25/2022</h3>
 Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85bcbd7e0fc#">Assets</a>
 </li>
 <li><a href="gnc-register:acct-guid=fad95b7147224f5fba1111133efe3287#">Accounts Receivable</a>
@@ -320,15 +320,19 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </tr>
 <tr><td><a href="gnc-register:acct-guid=1d7904ef6b454944b4602f8b62329847#">Publiscience</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱37,752.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱39,468.00</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=d5073ed2d46941069fb5b8a71afa4c6b#">Start of Year Section Pledges</a>
 </td>
 <td class="number-cell" rowspan="1" colspan="1">₱15,000.00</td>
 </tr>
+<tr><td><a href="gnc-register:acct-guid=d5eaa70cc23c462abde0849c3588a49a#">Yearbook</a>
+</td>
+<td class="number-cell" rowspan="1" colspan="1">₱48,306.00</td>
+</tr>
 <tr><td><a href="gnc-register:acct-guid=69e2d2f6d2e34e0392100aad66793a75#">Maam Paz</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱62,500.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱82,900.00</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=e7376616de7e4818b0d225140ab4c478#">Maam Rubie</a>
 </td>
@@ -336,7 +340,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </tr>
 <tr><td><a href="gnc-register:acct-guid=c4c537d539de4b26be989676d9e86360#">Batch Treasurer</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱104,788.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱113,100.00</td>
 </tr>
 <tr><td><a href="gnc-register:acct-guid=ae374a62d50440c1ae7ff934dbcd1963#">Bank Interest</a>
 </td>
@@ -362,8 +366,12 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </td>
 <td class="number-cell" rowspan="1" colspan="1">₱3,364.75</td>
 </tr>
+<tr><td><a href="gnc-register:acct-guid=9984b2bdd7f04291b4b02f959e2afcd6#">Accounts Payable</a>
+</td>
+<td class="number-cell" rowspan="1" colspan="1">₱1,000.00</td>
+</tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Money In</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱532,588.96</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱612,322.96</td>
 </tr>
 <tr><td rowspan="1" colspan="2"><hr /></td>
 </tr>
@@ -412,29 +420,29 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </tr>
 <tr><td><a href="gnc-register:acct-guid=80bb8a76290e46cdb8d787836fe2041a#">Yearbook</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱83,100.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱166,025.00</td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Money Out</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱435,051.85</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱517,976.85</td>
 </tr>
 <tr><td rowspan="1" colspan="2"><hr /></td>
 </tr>
 <tr><td class="text-cell" rowspan="1" colspan="1">Difference</td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱97,537.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱94,346.11</td>
 </tr>
 </tbody>
 </table>
 </td>
 </tr>
-<tr><td valign="top"><a href="gnc-options:report-id=19#">Edit Options</a>
- <a href="gnc-report:id=19#">Single Report</a>
+<tr><td valign="top"><a href="gnc-options:report-id=171#">Edit Options</a>
+ <a href="gnc-report:id=171#">Single Report</a>
 </td>
 </tr>
 </tbody>
 </table>
 </td>
 </tr>
-<tr><td valign="top" rowspan="1" colspan="2"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 02/07/2022</h3>
+<tr><td valign="top" rowspan="1" colspan="1"><table width="100%"><tbody><tr><td rowspan="1" colspan="1"><h3>Batch 2020 Hadrons Balance Sheet 03/25/2022</h3>
 <table><tbody><tr><td valign="top" align="left"><table><tbody><tr><td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
 <td style="min-width:60px" valign="top" align="left" rowspan="1" colspan="1"></td>
@@ -451,13 +459,13 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱148,571.11</td>
+<td class="number-cell" rowspan="1" colspan="1">₱94,346.11</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=fad95b7147224f5fba1111133efe3287#">Accounts Receivable</a>
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱51,748.75</td>
+<td class="number-cell" rowspan="1" colspan="1">₱51,736.75</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=d2b542cf30c54595a603b024c9d8b788#">Pagbalandra</a>
@@ -484,7 +492,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=7b9a004eb7f844d59c49728428b7848c#">Yearbook</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱48,318.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱48,306.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
@@ -492,7 +500,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱96,822.36</td>
+<td class="number-cell" rowspan="1" colspan="1">₱42,609.36</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=46b0a83118494150900246faf29b171d#">Bank Interest</a>
@@ -624,20 +632,20 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=d35c55ccf04e4344ab2f105d22fa2623#">Yearbook (YB)</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱88,782.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱34,594.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=d826375f8d1745b3a5dd0c6d02c7b0e5#">YB Funds with Advisers</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱66,894.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱4,394.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=41aabfd7e86e43aa9551bb8f48f22162#">YB Funds with Batch Treasurer</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱21,888.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱30,200.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
@@ -653,7 +661,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱148,571.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱94,346.11</td>
 </tr>
 </tbody>
 </table>
@@ -669,39 +677,25 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td class="total-number-cell" rowspan="1" colspan="1"> </td>
 </tr>
-<tr><td class="anchor-cell" rowspan="1" colspan="1"><a href="gnc-register:acct-guid=fb7c7100b9834103b7ea904c3e61d040#">Liabilities</a>
+<tr><td class="anchor-cell" rowspan="1" colspan="1"><a href="gnc-register:acct-guid=00c10510c0354e899f1e1b6db72fde96#">Liabilities</a>
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱83,925.00</td>
-</tr>
-<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=50a09fb5d9254cf6a25dfa8a15637899#">Accounts Payable</a>
-</td>
-<td valign="top" align="left"> </td>
-<td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱83,925.00</td>
-<td valign="top" align="left"> </td>
-</tr>
-<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=96e10ceb4f6145cbafcad4c13667e82a#">Toga</a>
-</td>
 <td valign="top" align="left"> </td>
 <td class="number-cell" rowspan="1" colspan="1">₱1,000.00</td>
-<td valign="top" align="left"> </td>
-<td valign="top" align="left"> </td>
 </tr>
-<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=03dac5c4fefd42c691f096b70ad27d69#">Yearbook</a>
+<tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=9984b2bdd7f04291b4b02f959e2afcd6#">Accounts Payable</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱82,925.00</td>
 <td valign="top" align="left"> </td>
+<td class="number-cell" rowspan="1" colspan="1">₱1,000.00</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Liabilities</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱83,925.00</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱1,000.00</td>
 </tr>
 <tr><td valign="top" align="left" rowspan="1" colspan="8"><hr /></td>
 </tr>
@@ -716,7 +710,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱481,674.54</td>
+<td class="number-cell" rowspan="1" colspan="1">₱593,299.54</td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=be46961b436b49d286aac80391ac70e9#">Charities</a>
 </td>
@@ -792,19 +786,19 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱134,575.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱246,200.00</td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=0bc91d702b2242a0a8889456cf53f8a7#">Advisers</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱64,394.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱84,794.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=69e2d2f6d2e34e0392100aad66793a75#">Maam Paz</a>
 </td>
-<td class="number-cell" rowspan="1" colspan="1">₱62,500.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱82,900.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
@@ -819,7 +813,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <tr><td class="anchor-cell" rowspan="1" colspan="1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="gnc-register:acct-guid=c4c537d539de4b26be989676d9e86360#">Batch Treasurer</a>
 </td>
 <td valign="top" align="left"> </td>
-<td class="number-cell" rowspan="1" colspan="1">₱104,788.00</td>
+<td class="number-cell" rowspan="1" colspan="1">₱113,100.00</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 </tr>
@@ -827,13 +821,13 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱417,028.43</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱499,953.43</td>
 </tr>
 <tr><td class="total-label-cell" rowspan="1" colspan="1">Total Equity</td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱64,646.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱93,346.11</td>
 </tr>
 <tr><td valign="top" align="left" rowspan="1" colspan="8"><hr /></td>
 </tr>
@@ -841,7 +835,7 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
 <td valign="top" align="left"> </td>
-<td class="total-number-cell" rowspan="1" colspan="1">₱148,571.11</td>
+<td class="total-number-cell" rowspan="1" colspan="1">₱94,346.11</td>
 </tr>
 </tbody>
 </table>
@@ -851,8 +845,8 @@ Selected Accounts<ul><li><a href="gnc-register:acct-guid=55b4404ddbc346d99e37e85
 </table>
 </td>
 </tr>
-<tr><td valign="top"><a href="gnc-options:report-id=20#">Edit Options</a>
- <a href="gnc-report:id=20#">Single Report</a>
+<tr><td valign="top"><a href="gnc-options:report-id=169#">Edit Options</a>
+ <a href="gnc-report:id=169#">Single Report</a>
 </td>
 </tr>
 </tbody>
